MDEV-7661 Unexpected result for: CAST(0xHHHH AS CHAR CHARACTER SET xxx)           for incorrect byte sequences